# bazel_iwyu

./: WORKSPACE
bazel/: dependencies.bzl  nix_deps.bzl  setup.bzl
bazel/iwyu/: BUILD.bazel  iwyu.bzl  run_iwyu.sh
